--- a/entrenamientoAPI/entrenamientoAPI.csproj
+++ b/entrenamientoAPI/entrenamientoAPI.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Cogito.Extensions.Configuration" Version="4.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
     <PackageReference Include="Microsoft.ML" Version="4.0.1" />
   </ItemGroup>
 
