--- a/entrenamientoAPI/entrenamientoAPI.csproj
+++ b/entrenamientoAPI/entrenamientoAPI.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Cogito.Extensions.Configuration" Version="4.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
     <PackageReference Include="Microsoft.ML" Version="4.0.1" />
+    <PackageReference Include="OpenAI" Version="2.1.0" />
   </ItemGroup>
 
 </Project>
