--- a/entrenamientoAPI/entrenamientoAPI.csproj
+++ b/entrenamientoAPI/entrenamientoAPI.csproj
@@ -9,9 +9,15 @@
 
   <ItemGroup>
     <PackageReference Include="Cogito.Extensions.Configuration" Version="4.0.0" />
+    <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
     <PackageReference Include="Microsoft.ML" Version="4.0.1" />
-    <PackageReference Include="OpenAI" Version="2.1.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Entities\BaseDatos\Respuestas\" />
+    <Folder Include="Entities\BaseDatos\Pametros\" />
   </ItemGroup>
 
 </Project>
