build(entrenamientoApi): se agrega y se modifica las referencias

--- a/entrenamientoAPI/entrenamientoAPI.csproj
+++ b/entrenamientoAPI/entrenamientoAPI.csproj
@@ -8,16 +8,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Entities\BaseDatos\NewFolder\**" />
+    <EmbeddedResource Remove="Entities\BaseDatos\NewFolder\**" />
+    <None Remove="Entities\BaseDatos\NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Cogito.Extensions.Configuration" Version="4.0.0" />
     <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
     <PackageReference Include="Microsoft.ML" Version="4.0.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Entities\BaseDatos\Respuestas\" />
-    <Folder Include="Entities\BaseDatos\Pametros\" />
   </ItemGroup>
 
 </Project>
